@@ -78,8 +78,6 @@ QT_MODULE(Test)
 namespace QTest
 {
     enum TestFailMode { Abort = 1, Continue = 2 };
-
-    int Q_TESTLIB_EXPORT qt_snprintf(char *str, int size, const char *format, ...);
 }
 
 QT_END_NAMESPACE
